kyverno/base/policies/ingress/test/test-disallow-wildcard-hostsni.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: test-wildcard-hostsni-not-allowed
spec:
  routes:
  - match: HostSNI(`*`)
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: test-wildcard-subdomain-hostsni-not-allowed
spec:
  routes:
  - match: HostSNI(`*.example.com`)
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: test-wildcard-hostsni-not-allowed-multiple-routes
spec:
  routes:
  - match: HostSNI(`example.com`)
    priority: 10
  - match: HostSNI(`*`)
    priority: 20
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: test-wildcard-hostsni-match-missing
spec:
  routes:
  - priority: 10
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: test-valid-hostsni
spec:
  routes:
  - match: HostSNI(`example.com`)
