kyverno/base/policies/ingress/test/test-external-dns-domain-label-length.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: no-external-dns-anno
  namespace: namespace
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-short-domain-label
  namespace: namespace
  annotations:
    external-dns.alpha.kubernetes.io/target: example.uw.systems
spec:
  rules:
    - host: "example.test.uw.systems"
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-long-domain-label
  namespace: namespace
  annotations:
    external-dns.alpha.kubernetes.io/target: example.uw.systems
spec:
  rules:
    - host: "long-enough-label-for-txt-created-record-to-exceed-63-chars.test.uw.systems"
